* Task/Bug Id: <Development task name or bug id> * Code Reviewed By: <Reviewed By> On : <Review date> * Technical Details:  <Technical details for the changes made if any> * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 24598

--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,125 @@
 <classpath>
 	<classpathentry kind="src" path="WEB-INF/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Catissuecore1.1"/>
-	<classpathentry kind="lib" path="/CommonPackageV11/lib/lucene-core-2.0.0.jar"/>
-	<classpathentry kind="lib" path="/CommonPackageV11/lib/titli-washu-1.0.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/acrobat-core-charset.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/activation.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/addressing-1.0.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/AdvanceQuery1.2.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/ant-jmeter.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/antlr-2.7.5H3.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/asm.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/axis.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/backport-util-concurrent.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/bulkoperator.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/castor-0.9.9.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/catiesCC.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/catissuecore-client.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/cglib.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/CHIRPS5.0.6.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/clm.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/cobertura.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/codegen.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/cog-axis.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/cog-jglobus.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/com.ibm.mq.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/com.ibm.mqbind.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/com.ibm.mqjms.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/commonpackage-1.1.8.3.2.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/commons-beanutils.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/commons-collections-3.2.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/commons-digester.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/commons-discovery.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/commons-fileupload-1.1.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/commons-fileupload-1.2.1.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/commons-httpclient-3.0.1.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/commons-io-1.2.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/commons-lang.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/commons-logging.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/commons-validator.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/concurrent.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/csmapi.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/DAO-1.1.9.5.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/Default_label_barcode_gen.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/dom4j-1.6.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/domain-authentication-manager.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/DynamicExtensions.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/DynamicExtensionsCommunication.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/ehcache-1.2.3.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/ext-1.1.1.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/flex-acrobat.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/flex-bootstrap-jsp.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/flex-bootstrap.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/flex-messaging-common.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/flex-messaging-opt.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/flex-messaging-req.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/flex-messaging.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/gate.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/hibernate3.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/IdPJar.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/jaas.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/jasper-compiler-jdt.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/jaws.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/jax-qname.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/jaxb-api.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/jaxb-impl.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/jaxb-libs.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/jaxb-xjc.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/jaxen-core.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/jaxen-jdom.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/jaxrpc.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/jboss-jaxws.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/jce-jdk13-125.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/jdom.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/jep-2.4.1.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/jmi.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/json.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/jstl.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/junit-4.1.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/label_barcode_gen_client.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/log4j.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/lucene-core-2.0.0.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/mail.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/mdrapi.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/mmtxProject.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/mof.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/mysql-connector-java-5.0.8-bin.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/namespace.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/ojdbc14.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/ontotext.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/opencsv-1.8.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/org-netbeans-graph.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/org-openide-util.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/ParticipantManager.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/patientLookUpService.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/PrintCatissueCore_Client.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/printservice_client.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/printservice_module.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/query.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/relaxngDatatype.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/saaj.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/saxpath.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/script-api-1.0.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/scrubber-runtime.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/securityManager-1.1.7.2.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/servlet.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/SimpleQuery-1.1.9.2.1.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/spring.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/standard.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/Stinger-2.6.1.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/struts-legacy.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/struts.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/swingx-2006_10_08.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/titli-washu-1.0.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/uml-1.4.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/washu-commons-1.1.7.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/wsrf_core_stubs.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/wsrf_core.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/wss4j.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/wustlkey-migration.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/xalan.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/xbean.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/xml-apis.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/xsdlib.jar"/>
 	<classpathentry kind="output" path="WEB-INF/classes"/>
 </classpath>
