* Task/Bug Id:  Bug 17721 -  CP creation fails as Clinical Diagnosis values are not available on Windows-Oracle-Fresh * Code Reviewed By: Sagar On : 15 Jul'10 * Technical Details:  Excluded the ctl file in the SQL/Permissible Values folder while creating the deploy able zip file. * Unit tested:   N * Developer Notes: The ctl file in the SQL/Permissible Values folder is generated in case of Oracle Fresh db creation. If this file is already present, it does not gets replaced. Hence excluding this file while creating the zip. * Current Build++ NA : NA * PMD - NA   Checkstyle -NA    Findbugs - NA     CPD – NA
SVN-Revision: 24624

--- a/build.xml
+++ b/build.xml
@@ -650,8 +650,11 @@
 		</copy>
 
 		<copy todir="${zip.dir}/SQL" overwrite="true">
-			<fileset dir="${base.dir}/SQL" />
+			<fileset dir="${base.dir}/SQL" >
+				<exclude name="**/Permissible_values/*.ctl"/>
+			</fileset>
 		</copy>
+
 		<!--delete dir="${zip.dir}/SQL/DBUpgrade" /-->
 
 		<copy file="MySql_DB_Creation.sql" todir="${zip.dir}" overwrite="true" />
