* Task/Bug Id: 17597 * Code Reviewed By: Nitesh On : 16-jul-2010 * Technical Details:  check added for Variables.isSpecimenLabelGeneratorAvl variable for displaying label field on UI. * Unit tested:   N/A * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : N/A * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 24628

--- a/catissuecore-properties/LabelGenerator.Properties
+++ b/catissuecore-properties/LabelGenerator.Properties
@@ -1,3 +1,4 @@
+specimenLabelGeneratorClass=edu.wustl.catissuecore.namegenerator.DefaultSpecimenLabelGenerator
 storageContainerLabelGeneratorClass=edu.wustl.catissuecore.namegenerator.DefaultStorageContainerLabelGenerator
 specimenBarcodeGeneratorClass=edu.wustl.catissuecore.namegenerator.DefaultSpecimenBarcodeGenerator
 storageContainerBarcodeGeneratorClass=edu.wustl.catissuecore.namegenerator.DefaultStorageContainerBarcodeGenerator
