* Task/Bug Id:  Bug 16504 -  BO: support for login name in BO * Code Reviewed By: Sagar On : 16/7/2010 * Technical Details:  Added the code to fetch user id based on login name. * Unit tested:   testAddCollectionProtocolWithPIAndCordName(), testAddNewUser() * Developer Notes: Added the code to fetch user id based on login name. * Current Build++ 103 : 105 * PMD - 103     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 24658

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -592,6 +592,7 @@ errors.invalid.durationinminutes=Please enter a positive integer value for {0}
 errors.invalid.gforge=Please enter a positive number for {0}
 errors.email.mismatch=The two email addresses do not match.
 errors.item.notExists={0} with given identifier does not exist.
+errors.entity.notExists={0} with given name does not exist.
 errors.locations.notSufficient=The system cannot store all the aliquots in the same container at this time due to insufficient number of storage locations.
 errors.locations.notSufficientForAliquot=The system cannot store all the aliquots in the same container at this time due to insufficient number of storage locations.
 errors.locations.notSufficientForAliquotDropdown=The system cannot store aliquots in the selected container on dropdown change due to insufficient number of storage locations.
