--- a/WEB-INF/src/AdvanceQuery.properties
+++ b/WEB-INF/src/AdvanceQuery.properties
@@ -1,5 +1,5 @@
 # tiles properties
-tilesTitle=<put name="title" value="caTissue Suite v1.1.p5.1" />
+tilesTitle=<put name="title" value="caTissue Suite v1.2" />
 tilesHeader=<put name="header" value="/pages/MainHeader.jsp" />
 tilesAppHeader=<put name="applicationheader" value="/pages/ApplicationHeader.jsp" />
 tilesCommonMenu=
