* Task/Bug Id: Bug #17653:Query owner for pre p5 saved queries should be configurable. * Code Reviewed By: Srikanth On : 23/07/2010 * Technical Details:  N * Unit tested:   N * Developer Notes: Made the query owner for old saved queries configurable. * Current Build++ Counts for this file : N * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 24670

--- a/caTissueInstall.properties
+++ b/caTissueInstall.properties
@@ -100,3 +100,7 @@ Application.url=
 
 #Set the location where caCore is generated
 cacore.deployable.location=./cacore_deployable
+
+#Set the owner for the old saved queries prior to v1.2. Enter the login name of the user whom
+#you want to make the owner.
+saved.query.owner=
