* Task/Bug Id: 17833 * Code Reviewed By: Chitra Garg On : 23 July 2010 * Technical Details:  NA * Unit tested:   NA * Developer Notes: "medicalrecord.source" property value change from "Source" to "Site" which will reflect in UI on Add/Edit Participent and "View Surgical Pathology Report" * Current Build++ Counts for this file : NA * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 24672

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -458,7 +458,7 @@ participant.medicalIdentifier=Medical Identifier(s)
 participant.race=Race
 participant.ethnicity=Ethnicity
 participant.activityStatus Activity Status
-medicalrecord.source=Source
+medicalrecord.source=Site
 medicalrecord.number=Medical Record Number
 participant.msg=Site or Medical Record Number
 participant.cpr.msg=Registration Date in Participant Registration
