* Task/Bug Id: 17742 - All the error message's should be properly punctuated * Code Reviewed By: Nitesh On : 23 July 2010 * Technical Details:  NA * Unit tested:  NA * Developer Notes: Error messages corrected. * Current Build++ Counts for this file : NA * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 24677

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -270,7 +270,7 @@ query.includeDescription Include Description
 query.text Text
 query.conceptCode Concept Code
 errors.executeQuery.genericmessage=An error occurred while executing the query. Please report this problem to the Administrator.
-errors.upgradequery.message = An error occurred while executing this query. If this is a query saved in older version of caTissueSuite, it might not work due to model changes. Please try recreating this query.If the problem still persists, please contact the administrator.
+errors.upgradequery.message = An error occurred while executing this query. If this is a query saved in older version of caTissueSuite, it might not work due to model changes. Please try recreating this query.If the problem still persists, please contact the Administrator.
 errors.executeQuery.multipleRoots=Expression graph should be a connected graph.
 simpleQuery.twovalues.required=Please enter two valid values for the 'Between' operator.
 query.date.format MM-DD-YYYY
@@ -418,10 +418,10 @@ user.approve.email.success=A user membership approval email is sent to the Admin
 user.approve.email.failure=User membership approval email not sent to the Administrator and the registered user.
 user.reject.email.success=A user membership rejection email is sent to the Administrator and the registered user.
 user.reject.email.failure=User membership rejection email not sent to the Administrator and the registered user.
-user.loginDetails.email.success=User login details email sent to the registered user
-user.loginDetails.email.failure=User login details email not sent to the registered user
-userRegistration.email.success=The user registration request email sent to the Administrator and the registered user
-userRegistration.email.failure=User registration request email not sent to the Administrator and the registered user
+user.loginDetails.email.success=User login details email sent to the registered user.
+user.loginDetails.email.failure=User login details email not sent to the registered user.
+userRegistration.email.success=The user registration request email sent to the Administrator and the registered user.
+userRegistration.email.failure=User registration request email not sent to the Administrator and the registered user.
 reportedProblem.email.success=Reported Problem email sent to the Administrator and the reporter.
 reportedProblem.email.failure=Reported Problem email not sent to the Administrator and the reporter.
 cdeDownload.email.success=CDE download status email successfully sent to the Administrator.
@@ -463,7 +463,7 @@ medicalrecord.number=Medical Record Number
 participant.msg=Site or Medical Record Number
 participant.cpr.msg=Registration Date in Participant Registration
 participant.lookup=Possible Participant Matches
-errors.participant.missing=Either {0} is missing in Medical Identifier
+errors.participant.missing=Either {0} is missing from Medical Identifier(s).
 errors.participant.participantRegistration.missing=Either Collection Protocol or Activity Status is not selected in Participant Registration
 participant.invaliddate=Birth Date should be earlier than the Death Date.
 participant.invalid.enddate=Death Date should not be entered if the person is alive.
@@ -973,11 +973,11 @@ createSpecimen.add.title=Create Specimen
 createSpecimen.derived.title=Create Derived Specimen
 specimen.derived.title=Specimen Derive
 specimen.msg=Name or Value
-errors.specimen.externalIdentifier.missing=Either {0} is missing in External Identifier
+errors.specimen.externalIdentifier.missing=Either {0} is missing in External Identifier.
 newSpecimen.msg=Type or Name
 newSpecimen.groupName Specimen Collection Group
 newSpecimen.parentLabel=Parent Label
-errors.newSpecimen.biohazard.missing=Either {0} is missing in Biohazards
+errors.newSpecimen.biohazard.missing=Either {0} is missing in Biohazards.
 newSpecimen.specimenEventParameters=Specimen Event Parameters
 storageposition.not.available There are no available storage position for this specimen.
 specimencollectiongroup.not.entered You have to enter Specimen Collection Group of Parent Specimen on Parent Specimen page before creating derived Specimens
@@ -1229,7 +1229,7 @@ storageContainer.specimenType=Specimen Type
 storageContainer.specimenClass=Specimen Class
 #finish
 storageContainer.msg=Key or Value
-errors.storageContainer.containerDetails.missing=Either {0} is missing in Container Details
+errors.storageContainer.containerDetails.missing=Either {0} is missing in Container Details.
 storageContainer.positionOne=Pos1
 storageContainer.positionTwo=Pos2
 storageContainer.parentID=ID
@@ -1468,7 +1468,7 @@ distribution.distributionBasedOn.barcode Barcode
 distribution.distributionBasedOn.label=Label
 
 
-errors.distribution.missing={0} is missing in Distributed Item(s)
+errors.distribution.missing={0} is missing in Distributed Item(s).
 errors.distribution.invalid={0} is not a valid value in Distributed Item(s)
 #-- DistributionAdd/Edit Keys End --
 
@@ -1883,7 +1883,7 @@ array.capacity.err.msg=Capacity of specimen array is not valid.
 array.contentPosition.err.msg=Array content positions of specimen array is not valid.
 
 participant.medical.identifier.creation.error=Participant does not exist
-errors.participant.extiden.missing=Either Site or Medical Record Number is missing in Medical Identifier
+errors.participant.extiden.missing=Either Site or Medical Record Number is missing from Medical Identifier(s).
 errors.participant.collectionProtocolRegistration.missing=Either Title is not selected or Date format is not correct in Collection Protocol Registration
 errors.participant.duplicate.collectionProtocol=Duplicate Collection Protocol selected
 errors.distribution.item.specimen=Distributed item Specimen
@@ -2217,7 +2217,7 @@ summary.page.spPathStat = Specimens by Pathological Status
 summary.page.spAnatSite = Specimens by Anatomic Site
 
 #---- Generic Error Message ------------
-system.error = System has encountered unexpected error. Please contact the administrator for further help. If you would like to report this problem, please fill in the below form.
+system.error = System has encountered unexpected error. Please contact the Administrator for further help. If you would like to report this problem, please fill in the below form.
 
 
 
