--- a/washuInstall.properties
+++ b/washuInstall.properties
@@ -26,3 +26,4 @@ csm.database.password=
 #clinportal-caTissue integration
 clinportal.integrationEnabled=false
 clinportal.url=
+clinportal.keystorePath=
