* Task/Bug Id: Changing case of 'C' to lower case fot CaTIES_conf folder. * Code Reviewed By: Sagar Baldwa On : 26 July'10 * Technical Details:  The installable zip has folder caTIES_conf with small 'c' and the source code has this folder with capital 'C'. This caused problem on Linux box. Hence changing the  case to small 'c' in source code as well. * Unit tested:   NA * Developer Notes: The installable zip has folder caTIES_conf with small 'c' and the source code has this folder with capital 'C'. This caused problem on Linux box. Hence changing the  case to small 'c' in source code as well. * Current Build++ NA : NA * PMD - NA     Checkstyle - NA     Findbugs - NA     CPD – NA
SVN-Revision: 24692

--- a/build.xml
+++ b/build.xml
@@ -688,7 +688,7 @@
 		</copy>
 		<!--- caTIES related files  start-->
 		<copy todir="${zip.dir}/caTIES_conf" overwrite="true">
-			<fileset dir="${base.dir}/CaTIES_conf" />
+			<fileset dir="${base.dir}/caTIES_conf" />
 		</copy>
 		<copy file="Dataset.dtd" todir="${zip.dir}" overwrite="true" />
 		<copy file="JniDeID.dll" todir="${zip.dir}" overwrite="true" />
