* Task/Bug Id: Added CTMS package in catissuecore .jar * Code Reviewed By: Nitesh Marwaha On : 27 July 2010 * Technical Details: Added CTMS package in catissuecore .jar * Unit tested: N.A. * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - No change     Checkstyle - No change     Findbugs - No change     CPD – No change
SVN-Revision: 24700

--- a/build.xml
+++ b/build.xml
@@ -1032,6 +1032,7 @@
 				<include name="**/edu/wustl/catissuecore/namegenerator/**"/>
 				<include name="**/edu/wustl/catissuecore/caties/**"/>
 				<include name="**/edu/wustl/catissuecore/hbm/**"/>
+				<include name="**/edu/wustl/catissuecore/ctms/integrator/**"/>
 
 				<exclude name="**/CVS*" />
 				<exclude name="**/java.policy.applet*" />
