* Task/Bug Id: Bug 17908 - Exclude and include entity group is not present in caTissueInstall.properties file * Code Reviewed By: None On : 28 Juny 2010 * Technical Details:  <Technical details for the changes made if any> * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 24707

--- a/caTissueInstall.properties
+++ b/caTissueInstall.properties
@@ -101,6 +101,12 @@ Application.url=
 #Set the location where caCore is generated
 cacore.deployable.location=./cacore_deployable
 
+#Comma separated Entity Groups which are to be excluded.
+exclude.entitygroup=
+
+#Comma separated Entity Groups which are only to be included.
+include.entitygroup=
+
 #Set the owner for the old saved queries prior to v1.2. Enter the login name of the user whom
 #you want to make the owner.
 saved.query.owner=
