* Task/Bug Id: 17599 - Wrong error message during bulk SCG creation * Code Reviewed By: Sagar On : 29 July 2010 * Technical Details:  NA * Unit tested:   NA * Developer Notes: property added
specimenCollectionGroup.studyCalenderEventPointAndPPID=Study Calendar Event Point and Protocol Participant Identifier should associate to same Collection Protocol.

In BO, for SCG insertion, if PPID and Study Calendar Event Point are not associated with same Collection Protocol this message will display.
    
* Current Build++ Counts for this file : 
* PMD - X     Checkstyle - X     Findbugs - X     CPD – X

SVN-Revision: 24730

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1155,6 +1155,7 @@ specimenCollectionGroup.medicalRecordNumber=Medical Record Number
 specimenCollectionGroup.surgicalPathologyNumber=Surgical Pathology Number
 specimenCollectionGroup.collectionStatus=Collection Status
 specimenCollectionGroup.participantNameWitProtocolId=Participant Name (Protocol ID)
+specimenCollectionGroup.studyCalenderEventPointAndPPID=Study Calendar Event Point and Protocol Participant Identifier should associate to same Collection Protocol.
 specimen.details.label Specimen Details
 childSpecimen.label Create Child Specimen(s)
 specimen.derivative Derivative
