* Task/Bug Id: 17742 - All the error message's should be properly punctuated. * Code Reviewed By: Nitesh On : 30 July 2010 * Technical Details:  NA * Unit tested:   NA * Developer Notes: Bug related error messages are properly punctuated. * Current Build++ Counts for this file : NA * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 24735

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1886,7 +1886,7 @@ array.contentPosition.err.msg=Array content positions of specimen array is not v
 participant.medical.identifier.creation.error=Participant does not exist
 errors.participant.extiden.missing=Either Site or Medical Record Number is missing from Medical Identifier(s).
 errors.participant.collectionProtocolRegistration.missing=Either Title is not selected or Date format is not correct in Collection Protocol Registration
-errors.participant.duplicate.collectionProtocol=Duplicate Collection Protocol selected
+errors.participant.duplicate.collectionProtocol=Duplicate Collection Protocol selected.
 errors.distribution.item.specimen=Distributed item Specimen
 errors.distribution.item.quantity=Distributed item Quantity
 errors.distribution.item.specimenArray=Distributed item Specimen Array
